--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List:</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <div class="container">
+
+        <div id="add-task-container">
+            <input type="text" id="input-task" placeholder="Enter Task">
+            <button id="add-task"><i class="fa-solid fa-plus"></i></button>
+        </div>
+
+        <div id="task-container">
+        </div>
+
+    </div>
 </body>
+<script src="app.js"></script>
 </html>
